@@ -4,13 +4,17 @@ import com.github.f4b6a3.ulid.Ulid;
 import com.github.f4b6a3.ulid.UlidFactory;
 import fr.ght1pc9kc.baywatch.common.api.model.EntitiesProperties;
 import fr.ght1pc9kc.baywatch.common.api.model.Entity;
+import fr.ght1pc9kc.baywatch.notify.api.model.BasicEvent;
+import fr.ght1pc9kc.baywatch.notify.api.model.EventType;
 import fr.ght1pc9kc.baywatch.security.api.AuthenticationFacade;
 import fr.ght1pc9kc.baywatch.security.api.model.Permission;
 import fr.ght1pc9kc.baywatch.security.api.model.Role;
+import fr.ght1pc9kc.baywatch.security.api.model.UpdatableUser;
 import fr.ght1pc9kc.baywatch.security.api.model.User;
 import fr.ght1pc9kc.baywatch.security.domain.exceptions.UnauthenticatedUser;
 import fr.ght1pc9kc.baywatch.security.domain.exceptions.UnauthorizedOperation;
 import fr.ght1pc9kc.baywatch.security.domain.ports.AuthorizationPersistencePort;
+import fr.ght1pc9kc.baywatch.security.domain.ports.NotificationPort;
 import fr.ght1pc9kc.baywatch.security.domain.ports.UserPersistencePort;
 import fr.ght1pc9kc.baywatch.techwatch.domain.model.QueryContext;
 import fr.ght1pc9kc.baywatch.tests.samples.UserSamples;
@@ -29,11 +33,16 @@ import java.time.Clock;
 import java.time.Instant;
 import java.time.ZoneOffset;
 import java.util.List;
+import java.util.Optional;
+import java.util.stream.Stream;
 
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyCollection;
 import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
@@ -43,6 +52,7 @@ class UserServiceImplTest {
     private final AuthorizationPersistencePort mockAuthorizationRepository = mock(AuthorizationPersistencePort.class);
     private final AuthenticationFacade mockAuthFacade = mock(AuthenticationFacade.class);
     private final UlidFactory mockUlidFactory = mock(UlidFactory.class);
+    private final NotificationPort mockNotificationPort = mock(NotificationPort.class);
 
     private UserServiceImpl tested;
 
@@ -50,15 +60,20 @@ class UserServiceImplTest {
     @SuppressWarnings("deprecation")
     void setUp() {
         when(mockAuthFacade.getConnectedUser()).thenReturn(Mono.just(UserSamples.YODA));
-        when(mockUserRepository.get(any())).thenReturn(Mono.just(UserSamples.LUKE));
+        doAnswer(answer -> Stream.of(UserSamples.LUKE, UserSamples.YODA, UserSamples.OBIWAN)
+                .filter(u -> u.id.equals(answer.getArgument(0, String.class)))
+                .findAny().map(Mono::just).orElseThrow()
+        ).when(mockUserRepository).get(anyString());
         when(mockUserRepository.list(any())).thenReturn(Flux.just(UserSamples.LUKE, UserSamples.OBIWAN, UserSamples.YODA));
         when(mockUserRepository.persist(any())).thenReturn(Flux.just(UserSamples.LUKE, UserSamples.OBIWAN, UserSamples.YODA));
         when(mockUserRepository.persist(anyString(), anyCollection())).thenReturn(Mono.just(UserSamples.LUKE));
         when(mockUserRepository.delete(anyString(), anyCollection())).thenReturn(Mono.empty().then());
         when(mockUserRepository.count(any())).thenReturn(Mono.just(3));
         when(mockAuthorizationRepository.count(any())).thenReturn(Mono.just(0));
+        when(mockNotificationPort.send(anyString(), any(EventType.class), any()))
+                .thenReturn(new BasicEvent<>(Ulid.fast().toString(), EventType.USER_NOTIFICATION, "New jedi in the force"));
 
-        tested = new UserServiceImpl(mockUserRepository, mockAuthorizationRepository,
+        tested = new UserServiceImpl(mockUserRepository, mockAuthorizationRepository, mockNotificationPort,
                 mockAuthFacade, NoOpPasswordEncoder.getInstance(),
                 Clock.fixed(CURRENT, ZoneOffset.UTC), mockUlidFactory);
     }
@@ -117,8 +132,58 @@ class UserServiceImplTest {
         ArgumentCaptor<List<Entity<User>>> users = ArgumentCaptor.forClass(List.class);
         verify(mockUserRepository).persist(users.capture());
 
-        Entity<User> actual = users.getValue().get(0);
+        Entity<User> actual = users.getValue().getFirst();
         Assertions.assertThat(actual).isEqualTo(Entity.identify(UserSamples.OBIWAN.id, CURRENT, UserSamples.OBIWAN.self));
+    }
+
+    @Test
+    void should_update_other_user_as_admin() {
+        when(mockAuthFacade.getConnectedUser()).thenReturn(Mono.just(UserSamples.YODA));
+        when(mockUserRepository.update(anyString(), any())).thenReturn(Mono.just(UserSamples.OBIWAN));
+        UpdatableUser obiChan = UserSamples.OBIWAN.self.updatable()
+                .name(Optional.of("Obi Chan"))
+                .build();
+
+        Mono<Entity<User>> actual = tested.update(UserSamples.OBIWAN.id, obiChan, "kenobi");
+
+        StepVerifier.create(actual)
+                .assertNext(a -> Assertions.assertThat(a).isNotNull())
+                .verifyComplete();
+
+        verify(mockUserRepository).update(UserSamples.OBIWAN.id, obiChan);
+    }
+
+    @Test
+    void should_update_my_user() {
+        when(mockAuthFacade.getConnectedUser()).thenReturn(Mono.just(UserSamples.OBIWAN));
+        when(mockUserRepository.update(anyString(), any())).thenReturn(Mono.just(UserSamples.OBIWAN));
+        UpdatableUser obiChan = UserSamples.OBIWAN.self.updatable()
+                .name(Optional.of("Obi Chan"))
+                .build();
+
+        Mono<Entity<User>> actual = tested.update(UserSamples.OBIWAN.id, obiChan, UserSamples.OBIWAN.self.password);
+
+        StepVerifier.create(actual)
+                .assertNext(a -> Assertions.assertThat(a).isNotNull())
+                .verifyComplete();
+
+        verify(mockUserRepository).update(UserSamples.OBIWAN.id, obiChan);
+    }
+
+    @Test
+    void should_fail_update_user_with_invalid_password() {
+        when(mockAuthFacade.getConnectedUser()).thenReturn(Mono.just(UserSamples.OBIWAN));
+        when(mockUserRepository.update(anyString(), any())).thenReturn(Mono.just(UserSamples.OBIWAN));
+        UpdatableUser obiChan = UserSamples.OBIWAN.self.updatable()
+                .name(Optional.of("Obi Chan"))
+                .build();
+
+        Mono<Entity<User>> actual = tested.update(UserSamples.OBIWAN.id, obiChan, "Invalid Password");
+
+        StepVerifier.create(actual)
+                .verifyError(UnauthorizedOperation.class);
+
+        verify(mockUserRepository, never()).update(UserSamples.OBIWAN.id, obiChan);
     }
 
     @Test
